environments/grid-glb-demo/resources/grid-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grid-system
  labels:
    app.kubernetes.io/part-of: grid-glb-demo
